r2/root/firewall.conf
# Generated by iptables-save v1.4.1.1 on Tue Dec  8 05:40:24 2020
*raw
:PREROUTING ACCEPT [3151:251850]
:OUTPUT ACCEPT [2256:167531]
COMMIT
# Completed on Tue Dec  8 05:40:24 2020
# Generated by iptables-save v1.4.1.1 on Tue Dec  8 05:40:24 2020
*nat
:PREROUTING ACCEPT [510:42692]
:POSTROUTING ACCEPT [52:3810]
:OUTPUT ACCEPT [29:3626]
-A POSTROUTING -s 172.16.0.0/16 -o eth0 -j MASQUERADE 
-A POSTROUTING -s 172.16.0.0/16 -o eth1 -j MASQUERADE 
COMMIT
# Completed on Tue Dec  8 05:40:24 2020
# Generated by iptables-save v1.4.1.1 on Tue Dec  8 05:40:24 2020
*mangle
:PREROUTING ACCEPT [3147:251270]
:INPUT ACCEPT [2323:177266]
:FORWARD ACCEPT [818:73764]
:OUTPUT ACCEPT [2256:167531]
:POSTROUTING ACCEPT [2683:215873]
COMMIT
# Completed on Tue Dec  8 05:40:24 2020
# Generated by iptables-save v1.4.1.1 on Tue Dec  8 05:40:24 2020
*filter
:INPUT DROP [111:17023]
:FORWARD DROP [391:25422]
:OUTPUT ACCEPT [2217:164233]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 11.4.3.0/24 -p ospf -j ACCEPT 
-A INPUT -s 224.0.0.5 -j ACCEPT 
-A INPUT -p icmp -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 11.4.3.0/24 -p ospf -j ACCEPT 
-A FORWARD -s 224.0.0.5 -j ACCEPT
-A FORWARD -i eth2 -p icmp -m state --state NEW -j ACCEPT 
-A FORWARD -i eth2 -p tcp -m multiport --dports 22,80,53 -m state --state NEW -j ACCEPT 
-A FORWARD -i eth2 -p udp -m multiport --dports 22,80,53 -m state --state NEW -j ACCEPT 
-A FORWARD -d 11.4.3.1 -i eth2 -p tcp -m multiport --dports 1194,8022 -m state --state NEW -j ACCEPT 
-A FORWARD -d 11.4.3.1 -i eth2 -p udp -m multiport --dports 1194,8022 -m state --state NEW -j ACCEPT  
# Completed on Tue Dec  8 05:40:24 2020
